crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_call_zero_arg_method.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > Result                         "
"┌org.busx.Test.MakeFd──────────────────────────────────────────────────────────┐"
"│<fd /dev/null ro>                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? help                     "
