crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_copy_as_get_result.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"          ┌copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────┐          "
"          │dbus-send: dbus-send --bus=unix:path=<SOCKET>,guid=<GUID>          "
"          │busctl: busctl --address=unix:path=<SOCKET>,guid=<GUID>          "
"          │qdbus: qdbus --bus unix:path=<SOCKET>,guid=<GUID>          "
"          │gdbus: gdbus call --address=unix:path=<SOCKET>,guid=<GUID>          "
"          │dbus-send --bus=unix:path=<SOCKET>,guid=<GUID>          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          └──────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
