crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_copy_as_listen_result.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"          ┌copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────┐          "
"          │dbus-send: dbus-monitor --address unix:path=<SOCKET>,guid=<GUID>          "
"          │busctl: busctl --address=unix:path=<SOCKET>,guid=<GUID>          "
"          │qdbus: (unsupported)                                                          │          "
"          │gdbus: gdbus monitor --address=unix:path=<SOCKET>,guid=<GUID>          "
"          │dbus-monitor --address unix:path=<SOCKET>,guid=<GUID>          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          │                                                                              │          "
"          └──────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
