crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_copy_as_popup_on_interface_screen.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > call TakeHints                                     "
"┌call org.busx.Test.TakeHints──────────────────────────────────────────────────────────────────────┐"
"│▶ hints  a{sv}  ▏                                                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│         ┌copy as — ↑↓ choose · Enter copy · Esc────────────────────────────────────────┐         │"
"│         │dbus-send: (unsupported)                                                      │         │"
"│         │busctl: busctl --address=unix:path=<SOCKET>,guid=<GUID>         │"
"│         │qdbus: (unsupported)                                                          │         │"
"│         │gdbus: gdbus call --address=unix:path=<SOCKET>,guid=<GUID>         │"
"│         │dbus-send cannot express this operation.                                      │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         │                                                                              │         │"
"│         └──────────────────────────────────────────────────────────────────────────────┘         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                             [Trigger]                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · Esc back · q quit · ? help                                   "
