crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_down_arrow_moves_selection.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"                                                                "
"┌Services──────────────────────────────────────────────────────┐"
"│org.busx.ScrollA                        <PID>  <PROC>         │"
"│org.busx.ScrollB                        <PID>  <PROC>         │"
"│org.busx.ScrollC                        <PID>  <PROC>         │"
"│org.busx.ScrollD                        <PID>  <PROC>         │"
"└──────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit · ? help             "
