crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_drill_into_test_service_shows_real_paths.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test                                                   "
"┌Objects───────────────────────────────────────────────────────┐"
"│/                                                             │"
"│/org                                                          │"
"│/org/busx                                                     │"
"│/org/busx/Test                                                │"
"│/org/busx/Test/sub                                            │"
"│                                                              │"
"│                                                              │"
"│                                                              │"
"└──────────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · Esc back · q quit · ? help  "
