crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_get_property.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > Result                         "
"┌org.busx.Test.volume──────────────────────────────────────────────────────────┐"
"│0.5                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? help                     "
