crates/busx/src/tui/snapshots/busx__tui__e2e_tests__e2e_listen_method_armed.snap
---
source: crates/busx/src/tui/e2e_tests.rs
expression: out
---
"org.busx.Test > /org/busx/Test > org.busx.Test > Result                         "
"┌listen org.busx.Test.TakeHints────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back/stop · q quit · ? help                "
